dr-croatia-components-main@b40668d4934/artifactory/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: artifactory
    istio-injection: disabled
  name: artifactory
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    argocd.argoproj.io/sync-options: Prune=false
    openshift.io/sa.scc.uid-range: 1001/1000
    openshift.io/sa.scc.supplemental-groups: 1001/10000
    openshift.io/sa.scc.mcs: s0:c28,c2
