dr-croatia-components-main@b40668d4934/artifactory/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: artifactory
  namespace: artifactory
spec:
  host: artifactory.apps.dr-nonpci-appdb.nbank.local
  to:
    kind: Service
    name: jfrog-platform-artifactory
    weight: 100
  port:
    targetPort: 8082
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
